# robot_chef

./: .gitignore  README.md  README_patch.md  depth.csv  depth1.csv  gqcnn_log.txt  grasp_quality.txt  log_spatula.txt  main.py  main_stir.py  notes.md  pyproject.toml  readme.txt  requirements.txt  rl.py  visualise_rl.py
config/recipes/: a2.yaml  path_planning.yaml  pour_demo.yaml  stir.yml
robot_chef/: __init__.py  actions.py  camera.py  config.py  config_orig.py  controller.py  controller_vision.py  executor.py  gqcnn.py  gqcnn_log.txt  isolated_simulation.py  models.py  rc_logging.py  rc_types.py  rl_env.py  rl_env_fixed_bowl.py  rl_env_old.py  sim.py  simulation.py  simulator.py  utils.py
robot_chef/control/: __init__.py  ik.py  traj.py
robot_chef/env/: __init__.py  frame_marker.urdf  particles.py
robot_chef/env/objects/: __init__.py  arm.py  bowl.urdf  get_obj_from_stl.py  log.txt  log_spatula.txt  pan.py  particles.py  pedestal.py  rice_bowl.py  spatula.py  specula.py  stove.py
robot_chef/env/spatula/: model.sdf
robot_chef/perception/: __init__.py  bowl_rim.py  camera.py
robot_chef/tasks/: __init__.py  a1.py  a2.py  base.py  detect_object.py  pour_bowl_into_pan.py  predict_grasp.py  stir.py  stir2.py  under_arm_reach.py
scripts/: a2.sh  smoke_pour.sh  stir.sh
tests/: test_pour_bowl_into_pan.py  test_pour_bowl_into_pan_perception.py  test_rim_grasp.py
