[project]
name = "robot-chef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "imageio>=2.37.2",
    "isort>=7.0.0",
    "numpy>=2.3.5",
    "pybullet>=3.2.7",
    "pydantic>=2.12.5",
    "pydantic-yaml>=1.6.0",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
]
